--- a/answers_2.tex
+++ b/answers_2.tex
@@ -51,9 +51,12 @@ Weiwei Chen, Rafael Ferreira da Silva, Ewa Deelman, Thomas Fahringer
 I had thought that to consider the network bandwidth competition can better improve the fidelity of the simulation. Given the added assumption in the revision. I think that could be put to the future work. Other than this, I think my previous comments are well addressed in the revision.
 \end{review}
 
-\answer{We updated our Future Work to include other models about network bandwidth.}
+\answer{We updated our Future Work to include other network bandwidth models:}
 
-\revised{}
+\revised{We also assumed that 
+the network bandwidth is the maximum allowed data transfer speed between a pair 
+of virtual machines per file. Hence, we plan to evaluate our approach in other network 
+bandwidth models.}
 
 
 \end{letter}
