--- a/ftc.tex
+++ b/ftc.tex
@@ -1382,8 +1382,10 @@ bring different performance improvement.
 
 We assumed that the inter-arrival time of transient failures is a function of task type, which is one of 
 the major impact factors. In the future, we plan to consider other factors such as the execution 
-site, which may improve the accuracy of the model. \rev{We also assumed that the network bandwidth is the maximum allowed data
-transfer speed between a pair of virtual machines per file. In the future, we plan to consider other models of network bandwidth.}
+site, which may improve the accuracy of the model. \rev{We also assumed that 
+the network bandwidth is the maximum allowed data transfer speed between a pair 
+of virtual machines per file. Hence, we plan to evaluate our approach in other network 
+bandwidth models.}
 
 
 
