Updated paper with Thomas comments.

--- a/answers_2.tex
+++ b/answers_2.tex
@@ -53,10 +53,10 @@ I had thought that to consider the network bandwidth competition can better impr
 
 \answer{We updated our Future Work to include other network bandwidth models:}
 
-\revised{We also assumed that 
-the network bandwidth is the maximum allowed data transfer speed between a pair 
-of virtual machines per file. Hence, we plan to evaluate our approach in other network 
-bandwidth models.}
+\revised{In this paper we assumed that the network 
+bandwidth is the maximum allowed data transfer speed between a pair of virtual machines per file. 
+Future work will elaborate different network models to explore their impact on our fault-tolerant 
+clustering techniques.}
 
 
 \end{letter}
