--- a/ftc.tex
+++ b/ftc.tex
@@ -1382,10 +1382,10 @@ bring different performance improvement.
 
 We assumed that the inter-arrival time of transient failures is a function of task type, which is one of 
 the major impact factors. In the future, we plan to consider other factors such as the execution 
-site, which may improve the accuracy of the model. \rev{We also assumed that 
-the network bandwidth is the maximum allowed data transfer speed between a pair 
-of virtual machines per file. Hence, we plan to evaluate our approach in other network 
-bandwidth models.}
+site, which may improve the accuracy of the model. \rev{In this paper we assumed that the network 
+bandwidth is the maximum allowed data transfer speed between a pair of virtual machines per file. 
+Future work will elaborate different network models to explore their impact on our fault-tolerant 
+clustering techniques.}
 
 
 
